// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressIndicator /> when complete matches its snapshot 1`] = `
<StyledProgressIndicatorBase
  ariaValueText="100% complete"
  barHeight={4}
  className="y-progress-indicator"
  percentComplete={1}
  styles={[Function]}
/>
`;

exports[`<ProgressIndicator /> when incomplete matches its snapshot 1`] = `
<StyledProgressIndicatorBase
  ariaValueText="50% complete"
  barHeight={4}
  className="y-progress-indicator"
  percentComplete={0.5}
  styles={[Function]}
/>
`;

exports[`<ProgressIndicator /> with additional className matches its snapshot 1`] = `
<StyledProgressIndicatorBase
  ariaValueText="50% complete"
  barHeight={4}
  className="y-progress-indicator TEST_CLASS"
  percentComplete={0.5}
  styles={[Function]}
/>
`;
